[tool.poetry]
name = "final proj 671"
version = "0.1.0"
description = ""
authors = ["haashim-mirza <haashimalimirza287w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
altair = "^5.5.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
ipython = "^8.30.0"
jupyter = "^1.1.1"
vega-datasets = "^0.9.0"
openpyxl = "^3.1.5"
black = {extras = ["jupyter"], version = "^24.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
